# parma-health

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/parma_health/: __init__.py  anonymizer.py  cli.py  connectors.py  optimizer.py  primitives.py
tests/: test_anonymizer.py  test_connectors.py  test_csv_connector.py  test_optimizer.py  test_primitives.py
