[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parma-health"
version = "0.1.0"
description = "Parma Health Toolkit for Healthcare Anonymization"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Parma Health Team", email = "team@parmahealth.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "faker>=19.0.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pandas-stubs>=2.0.0"
]

[project.scripts]
parma-health = "parma_health.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
